--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,18 @@ spring:
     name: user_center_back
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://101.132.114.12:3306/lihui?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://101.132.114.12:3306/lihui
     username: lihui
     password: 123456
 server:
   port: 8080
 
 mybatis-plus:
-  global-config:
-    db-config:
-      logic-delete-field: deleted  # 全局逻辑删除的实体字段名
-      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+#  global-config:
+#    db-config:
+#      logic-delete-field: deleted  # 全局逻辑删除的实体字段名
+#      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+#      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+  configuration:
+    map-underscore-to-camel-case: false
