--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     timeout: 86400
 server:
   port: 7070
+  servlet:
+    context-path: /api
 mybatis-plus:
   global-config:
     db-config:
